Fix response for get candidate response by question id
