# Routes/candidateResponse.js
@@ -12,7 +12,7 @@ const {
     getCandidateResponse,
     updateCandidateResponse,
     deleteCandidateResponse,
-    getCandidateResponseByTestAndQuestion,
+    getCandidateResponseByQuestion,
     getCandidateResponseByCandidateTestAndQuestion
 } = require('../Controllers/candidateResponse')
 
@@ -23,7 +23,7 @@ router.route('/api/v1/candidate-response').post(protect, createCandidateResponse
 router.route('/api/v1/candidate-response/:id').get(protect, authorize, getCandidateResponse)
 router.route('/api/v1/candidate-response/:id').put(protect, authorize, updateCandidateResponse)
 router.route('/api/v1/candidate-response/:id').delete(protect, authorize, deleteCandidateResponse)
-router.route('/api/v1/candidate-response/test/question/:question_id').get(protect, authorize, getCandidateResponseByTestAndQuestion)
+router.route('/api/v1/candidate-response/question/:question_id').get(protect, authorize, getCandidateResponseByQuestion)
 router.route('/api/v1/candidate-response/candidate/:candidate_id/test/:test_id/question/:question_id').get(protect, authorize, getCandidateResponseByCandidateTestAndQuestion)
 // router.route('/api/v1/candidate-response/self').put(protect, authorizeAdmin, updateSelf)
 
